Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Dgplug Summer Training 2014 : Python Programming/Open Source" />
+    <meta name="description" content="The Open Source Way : Dgplug Summer Training 2014" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Dgplug Summer Training 2014</title>
+    <title>The Open Source Way</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/novice-coder12">View on GitHub</a>
 
-          <h1 id="project_title">Dgplug Summer Training 2014</h1>
-          <h2 id="project_tagline">Python Programming/Open Source</h2>
+          <h1 id="project_title">The Open Source Way</h1>
+          <h2 id="project_tagline">Dgplug Summer Training 2014</h2>
 
         </header>
     </div>
