--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
 
 <p>Well,Dgplug is a Linux's user group of Durgapur.It is a group of some open source enthusiasts who have been organizing this summer training since past seven years.This training has brought together people from all corners of the world, who share the same passion for learning something new.From a novice coder (like me) to some amazing developers who are working in big techies are there, contributing and sharing experiences with us. I am looking forward to connect with this awesome bunch of people and contribute.</p>
 
+	</div></section>		<section id="recent-posts" class="widget widget_recent_entries"><div class="widget-wrap">		<h4 class="widget-title widgettitle">Recent Posts</h4>
+		<ul>
+					<li>
+				<a href="novice-coder12.github.io/guest_lecture.html">First Guest Lecture</a>
+						</li>
+					
+		</ul>
+
+
+
+
+
 <h3>
 <a name="when-where-what" class="anchor" href="#when-where-what"><span class="octicon octicon-link"></span></a>When? Where? What?</h3>
 
